removed download buttons

--- a/index.html
+++ b/index.html
@@ -108,16 +108,17 @@
 			</div>
 		</div><!-- /row -->
 	
-	
+	<!-- removed download buttons
 	<div class="container">
 		<div class="row centered">
 			<div class="col-lg-6 col-lg-offset-3">
 				  <button type="submit" class="btn btn-warning btn-lg" style="margin:5pt;">Download Backup Manager</button>
 				  <button type="submit" class="btn btn-warning btn-lg" style="margin:5pt;">Download Recover Manager</button>			
 			</div>
-		</div><!-- /row -->
-	</div><!-- /container -->
-        
+		</div>
+	</div>
+    -->
+      
     <div class="container">
         <hr/>
         <div class="row mt centered">
