removed contact glyphicons

--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
 				<img class="img-circle" src="assets/img/pic1.jpg" width="140" alt="">
 				<h4>Carlton Duffett</h4>
 				<p>Back-end guru and lead node.js developer.<br/>Co-designed our API, developed our server library, and manages our AWS resources.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+				<!--<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>-->
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img class="img-circle" src="assets/img/pic2.jpg" width="140" alt="">
 				<h4>Deema Kutbi</h4>
 				<p>Visionary and lead application developer.<br/>Co-designed our client applications and developed our client back-end.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+				<!--<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>-->
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img class="img-circle" src="assets/img/pic3.jpg" width="140" alt="">
 				<h4>Konstantino Sparakis</h4>
 				<p>Back-end wizard and lead C# developer.<br/>Co-designed our API and developed our<br/>client library.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+				<!--<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>-->
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
 		
@@ -183,14 +183,14 @@
 				<img class="img-circle" src="assets/img/pic4.jpg" width="140" alt="">
 				<h4>Emilio Teran</h4>
 				<p>Tasteful designer and lead UI developer.<br/>Co-designed our client applications and created<br/>our stunning website.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+				<!--<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>-->
 			</div><!--/col-lg-4 -->
 
 			<div class="col-lg-4">
 				<img class="img-circle" src="assets/img/pic5.png" width="140" alt="">
 				<h4>Minhan Xiang</h4>
 				<p>Backups master and lead PowerShell developer. Implemented our backup system and client back-end.</p>
-				<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>
+				<!--<p><i class="glyphicon glyphicon-send"></i> <i class="glyphicon glyphicon-phone"></i> <i class="glyphicon glyphicon-globe"></i></p>-->
 			</div><!--/col-lg-4 -->
 		</div><!-- /row -->
 	</div><!-- /container -->
